@@ -237,9 +237,29 @@ class TestGem < RubyGemTestCase
     assert_equal [Gem.dir], Gem.path
   end
 
+  def test_self_path_APPLE_GEM_HOME
+    Gem.clear_paths
+    Gem.const_set :APPLE_GEM_HOME, '/tmp/apple_gem_home'
+
+    assert Gem.path.include?('/tmp/apple_gem_home')
+  ensure
+    Gem.send :remove_const, :APPLE_GEM_HOME
+  end
+
+  def test_self_path_APPLE_GEM_HOME_GEM_PATH
+    Gem.clear_paths
+    ENV['GEM_PATH'] = @gemhome
+    Gem.const_set :APPLE_GEM_HOME, '/tmp/apple_gem_home'
+
+    assert !Gem.path.include?('/tmp/apple_gem_home')
+  ensure
+    Gem.send :remove_const, :APPLE_GEM_HOME
+  end
+
   def test_self_path_ENV_PATH
     Gem.clear_paths
     path_count = Gem.path.size
+    path_count -= 1 if defined? APPLE_GEM_HOME
     Gem.clear_paths
     util_ensure_gem_dirs
 
@@ -259,8 +279,8 @@ class TestGem < RubyGemTestCase
     ENV['GEM_PATH'] = dirs.join File::PATH_SEPARATOR
 
     assert_equal @gemhome, Gem.dir
+
     paths = [Gem.dir]
-    paths << APPLE_GEM_HOME if defined? APPLE_GEM_HOME
     assert_equal @additional + paths, Gem.path
   end
 
@@ -272,8 +292,8 @@ class TestGem < RubyGemTestCase
     ENV['GEM_PATH'] = @additional.join(File::PATH_SEPARATOR)
 
     assert_equal @gemhome, Gem.dir
+
     paths = [Gem.dir]
-    paths.insert(0, APPLE_GEM_HOME) if defined? APPLE_GEM_HOME
     assert_equal @additional + paths, Gem.path
   end
 
